zz_cproject_old/pointer/test/const_pointer.c
/*
 * const_pointer.c
 *
 *  Created on: Sep 20, 2024
 *      Author: lirongyaoper
 */
//#include <stdio.h>
////
//void test1(){
//	int n = 10;
//	int m = 20;
//	int* pn = &n;
//	printf('%d\n',pn);
//	*pn = 30;
//	printf('%d\n',n);
//	pn = &m;
//	printf('%p\n',pn);
//	printf('%d\n',m);
//}
////
//
//
//int main(){
//	test1();
//
//	return 0;
//}

//int main(){
//	const int n = 10;
//	n = 0;//error
//	printf("%d\n",n);
//	return 0;
//}

//int main(){
//	const int n =10;  //n的本质还是变量
//	int arr[n] = {0};//报错
//	return 0;
//}



//int main(){
//	const int n = 10;
//	int* pn = &n;
//	*pn = 20;
//	printf("%d\n",n);
//	return 0;
//}
